add razorpay dependencies

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "packages/*"
   ],
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "razorpay": "^2.9.5"
   }
 }
