--- a/apps/FRONTED/vite-project/package.json
+++ b/apps/FRONTED/vite-project/package.json
@@ -25,11 +25,13 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^7.1.0",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "tabler-icons-react": "^1.56.0",
